// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate the wordListCompiler a simple hunspell dictionary depth 0 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler a simple hunspell dictionary depth 1 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler compiling to a file without split 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler reading and normalizing to cities.trie 1`] = `
{
  "error": "",
  "log": "Reading Words into Trie
Reduce duplicate word endings
Writing to file cities.trie
Done writing to file cities.trie",
}
`;

exports[`Validate the wordListCompiler reading and normalizing to cities.trie.gz 1`] = `
{
  "error": "",
  "log": "Reading Words into Trie
Reduce duplicate word endings
Writing to file cities.trie.gz
Done writing to file cities.trie.gz",
}
`;

exports[`Validate the wordListCompiler reading and normalizing to text file: cities.txt 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler reading and normalizing to text file: cities.txt.gz 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the wordListCompiler tests normalized to a trie 1`] = `
{
  "error": "",
  "log": "",
}
`;
